[package]
name = "dnssec-prover"
version = "0.1.0"
authors = ["Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://git.bitcoin.ninja/dnssec-prover"
description = "A simple crate which allows for the creation and validation of transferrable proofs of entries in the DNS."
keywords = ["dns", "dnssec", "rfc9102", "no-std"]
categories = ["cryptography", "no-std"]
edition = "2021"
rust-version = "1.60.0"

[dependencies]
ring = { version = "0.17", default-features = false, features = ["alloc"] }
hex_lit = { version = "0.1", default-features = false, features = ["rust_v_1_46"] }

[dev-dependencies]
hex-conservative = { version = "0.1", default-features = false, features = ["alloc"] }
base64 = "0.21"
