[package]
name = "dnssec-prover"
version = "0.3.1"
authors = ["Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://git.bitcoin.ninja/index.cgi?p=dnssec-prover"
description = "A simple crate which allows for the creation and validation of transferrable proofs of entries in the DNS."
keywords = ["dns", "dnssec", "rfc9102", "no-std"]
categories = ["cryptography", "no-std"]
edition = "2021"
rust-version = "1.60.0"

[features]
std = []
tokio = ["tokio_crate/net", "tokio_crate/io-util", "std"]
build_server = ["tokio", "tokio-stream", "tokio_crate/rt-multi-thread", "tokio_crate/macros"]

[dependencies]
ring = { version = "0.17", default-features = false, features = ["alloc"] }
hex_lit = { version = "0.1", default-features = false, features = ["rust_v_1_46"] }
tokio_crate = { package = "tokio", version = "1.0", default-features = false, optional = true }
tokio-stream = { version = "0.1", default-features = false, optional = true, features = ["io-util"] }

[dev-dependencies]
hex-conservative = { version = "0.1", default-features = false, features = ["alloc"] }
base64 = "0.21"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
tokio_crate = { package = "tokio", version = "1.0", features = ["rt", "macros", "net", "rt-multi-thread"] }
tokio-stream = { version = "0.1", default-features = false, features = ["io-util"] }
minreq = { version = "2.0" }

[lib]
name = "dnssec_prover"
path = "src/lib.rs"

[[bin]]
name = "http_proof_gen"
path = "src/http.rs"
