[package]
name = "dnssec-prover"
version = "0.3.6"
authors = ["Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://git.bitcoin.ninja/index.cgi?p=dnssec-prover"
description = "A simple crate which allows for the creation and validation of transferrable proofs of entries in the DNS."
keywords = ["dns", "dnssec", "rfc9102", "no-std"]
categories = ["cryptography", "no-std"]
edition = "2021"
rust-version = "1.60.0"

[package.metadata.docs.rs]
features = ["std", "validation", "tokio"]

[features]
default = ["validation"]
std = []
validation = ["ring", "hex_lit"]
tokio = ["tokio_crate/net", "tokio_crate/io-util", "std"]
build_server = ["tokio", "tokio_crate/rt-multi-thread", "tokio_crate/macros"]

[dependencies]
ring = { version = "0.17", default-features = false, features = ["alloc"], optional = true }
hex_lit = { version = "0.1", default-features = false, features = ["rust_v_1_46"], optional = true }
tokio_crate = { package = "tokio", version = "1.0", default-features = false, optional = true }

[dev-dependencies]
hex-conservative = { version = "0.1", default-features = false, features = ["alloc"] }
base64 = "0.21"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
tokio_crate = { package = "tokio", version = "1.0", features = ["rt", "macros", "net", "rt-multi-thread"] }
minreq = { version = "2.0" }

[lib]
name = "dnssec_prover"
path = "src/lib.rs"

[[bin]]
name = "http_proof_gen"
path = "src/http.rs"
