[package]
name = "dnssec-prover-wasm"
version = "0.1.0"
authors = ["Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://git.bitcoin.ninja/index.cgi?p=dnssec-prover"
description = "A simple crate which allows for the creation and validation of transferrable proofs of entries in the DNS."
edition = "2021"

[dependencies]
dnssec-prover = { path = "../", default-features = false, features = ["validation"] }
wasm-bindgen = { version = "0.2", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
wee_alloc = { version = "0.4", default-features = false }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
